// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot: components/RandomNumber.jsx with default display function 1`] = `
<mocked-component
  zDepth={0}
>
  <span
    className="label"
  >
    Random Number: 
  </span>
  <span
    className="value"
  >
    0.123456789
  </span>
</mocked-component>
`;

exports[`Snapshot: components/RandomNumber.jsx with specified display function 1`] = `
<mocked-component
  zDepth={0}
>
  <span
    className="label"
  >
    Random Number: 
  </span>
  <span
    className="value"
  >
    {"value":0.123456789}
  </span>
</mocked-component>
`;

exports[`Snapshot: components/RandomNumber.jsx with specified display function 2`] = `
<mocked-component
  zDepth={0}
>
  <span
    className="label"
  >
    Random Number: 
  </span>
  <span
    className="value"
  >
    1f9add3739635f
  </span>
</mocked-component>
`;

exports[`Snapshot: components/RandomNumber.jsx with specified display function 3`] = `
<mocked-component
  zDepth={0}
>
  <span
    className="label"
  >
    Random Number: 
  </span>
  <span
    className="value"
  >
    4fzzzxjylrx
  </span>
</mocked-component>
`;

exports[`Snapshot: components/RandomNumber.jsx with specified display function 4`] = `
<mocked-component
  zDepth={0}
>
  <span
    className="label"
  >
    Random Number: 
  </span>
  <span
    className="value"
  >
    0.01524157875019052
  </span>
</mocked-component>
`;

exports[`Snapshot: components/RandomNumber.jsx with specified display function 5`] = `
<mocked-component
  zDepth={0}
>
  <span
    className="label"
  >
    Random Number: 
  </span>
  <span
    className="value"
  >
    0, 0.123456789, 0.246913578, 0.370370367
  </span>
</mocked-component>
`;
